# moneyflow

./: .gitignore  Cargo.toml  README.md
migrations/: 20250313190152_create_user_table.sql  20250314103000_create_user_table.sql  20250314103205_create_categories_table.sql  20250314104451_create_transactions_table.sql  20250414150915_create_user_table.sql  20250414154429_create_categories_table.sql
src/: main.rs
src/controllers/: auth.rs  me.rs
src/db/: user.rs
