[package]
name = "moneyflow"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
bcrypt = "0.17.0"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = [
        "runtime-tokio",
        "tls-rustls",
        "mysql",
        "chrono"
    ] }
tokio = { version = "1.45.1", features = ["full"] }
regex = "1.11.1"

[profile.dev.package.sqlx-macros]
opt-level = 3

members = [ "dotenv"]
